# MDL-Ynor-Archtecture

./: .env  .gitignore  .gitmodules  .vercelignore  00_A_ROOT_INDEX_CORPUS_MDL_YNOR.md  CERTIFICATION_V7_1.md  CLOUD_UPLOAD_GUIDE.md  DEPLOY_TO_RENDER.md  Dockerfile  GPT_CUSTOM_ACTION_SPEC_V11_5.json  GPT_CUSTOM_ACTION_SPEC_V7_1.json  GPT_CUSTOM_SYSTEM_PROMPT_V11_5.txt  GPT_CUSTOM_SYSTEM_PROMPT_V7_1.txt  LICENSE  LICENSE.md  MASTER_PROMPT_Y_7_1.md  MASTER_YNOR_KNOWLEDGE_V7.md  README.md  api_app.py  app.py  app_cloud.py  build_cloud_package.ps1  build_corpus_audit.py  build_global_fractal_chiasm.py  build_gpt_upload_pack.ps1  build_gpt_upload_pack_student.ps1  build_step11_public_brief.py  build_step12_submission_pack.py  build_step7_master_index.py  build_step8_visual_map.py  build_step9_canonical_edition.py  check_axes_convergence.py  collapse_report.json  corpus_layers.json  corpus_optimization_plan.json  fix_encoding.py  generate_academic_bundle.py  main.py  mdl_metrics_bridge.py  package.json  (+15 more)
ARCHIVES/01_A_FONDATION/01_SOURCE_IMPLANTEE/MDL_Ynor_Framework/: .env.template  .gitignore  02_B_B_CONSTITUTION_FONDATION_SOURCE_IMPLANTEE_MDL_YNOR_FRAMEWORK_YNOR_FULL_CORPUS_FORMAL_SPEC_V2_3.md  02_B_B_ROOT_MDL_YNOR_ARCHITECTURAL_SPECIFICATION_YNOR_FRAMEWORK_147740.md  02_B_CONSTITUTION_FONDATION_SOURCE_IMPLANTEE_MDL_YNOR_FRAMEWORK_YNOR_FULL_CORPUS_FORMAL_SPEC_V2_3.md  02_B_CONSTITUTION_FONDATION_SOURCE_IMPLANTEE_MDL_YNOR_FRAMEWORK_YNOR_THEOREM_OMEGA_CONSERVATION.md  02_B_CONSTITUTION_FONDATION_SOURCE_IMPLANTEE_MDL_YNOR_FRAMEWORK_YNOR_THEOREM_OMEGA_PLUS_SOVEREIGNTY.md  (+6 more)
(+3795 files in other folders)
